# random-nipple-player

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  file_version_info.txt  mypy.ini  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  codeql-analysis.yml  pypi.yml
randomnipple/: MainWindow.py  NippleOptionDict.py  RandomPlayer.py  VoiceDirectoryChecker.py  main.py
