[metadata]
name = random-nipple-player
version = attr: randomnipple.__version__
description = 音声作品「乳首オナ指示でカリカリタイム」(RJ323807)用のプレイヤー
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = eggplants
author_email = w10776e8w@yahoo.co.jp
url = https://github.com/eggplants/random-nipple-player
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include-package-data = True
python_requires = >= 3.8
install_requires =
    PySimpleGUI
    simpleaudio

[options.package_data]
random-nipple-player = py.typed

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-requests

[options.entry_points]
console_scripts =
    rnp=randomnipple.main:main

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
