[metadata]
name = random_nipple_player
version = attr: randomnipple.__version__
description = 音声作品「乳首オナ指示でカリカリタイム」(RJ323807)用のプレイヤー
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/random-nipple-player
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PySimpleGUI>=4.57.0
    simpleaudio>=1.0.4
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    rnp = randomnipple.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0

[options.package_data]
randomnipple = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
